// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EuiTabs props expand is rendered 1`] = `
<div
  class="euiTabs emotion-euiTabs-m-bottomBorder"
  role="tablist"
>
  children
</div>
`;

exports[`EuiTabs props size l is rendered 1`] = `
<div
  class="euiTabs emotion-euiTabs-l-bottomBorder"
  role="tablist"
>
  children
</div>
`;

exports[`EuiTabs props size m is rendered 1`] = `
<div
  class="euiTabs emotion-euiTabs-m-bottomBorder"
  role="tablist"
>
  children
</div>
`;

exports[`EuiTabs props size s is rendered 1`] = `
<div
  class="euiTabs emotion-euiTabs-s-bottomBorder"
  role="tablist"
>
  children
</div>
`;

exports[`EuiTabs props size xl is rendered 1`] = `
<div
  class="euiTabs emotion-euiTabs-xl-bottomBorder"
  role="tablist"
>
  children
</div>
`;

exports[`EuiTabs renders 1`] = `
<div
  aria-label="aria-label"
  class="euiTabs testClass1 testClass2 emotion-euiTabs-m-bottomBorder"
  data-test-subj="test subject string"
  role="tablist"
>
  children
</div>
`;
